# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-ci.yml
gendiff/: __init__.py  cli.py  gendiff.py  generate_diff.py
gendiff/formatters/: edit_result_string.py  formatter_router.py  plain.py  stylish.py  to_json.py  to_yaml.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: expected_flat.json  expected_flat.py  expected_flat.yaml  expected_nested.json  expected_nested.py  expected_nested.yaml  nested2.yaml
gendiff/utilities/: cli.py  data_comparator.py  is_empty_file.py  loaders.py
