[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Gendiff is a console utility that generates the difference between two data structures."
authors = ["Petr Malafeev <StandBy545@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/Pythonusus/python-project-50"
classifiers = [
    "Topic :: File Formats",
    "Environment :: Console"
]
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
