[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Gendiff is a console utility that generates the difference between two data structures."
authors = ["Petr Malafeev <StandBy545@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/Pythonusus/python-project-50"
classifiers = [
    "Topic :: File Formats",
    "Environment :: Console"
]
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"